# atlas

./: .gitignore  ReadMe.txt  build.bat  clant-tidy-info.txt  cpp-check.txt  main.cpp
angularProjectName/: README.md  README_CHECK_IS_UNIVERSAL.md  README_ESLINT.md  README_FETCHING_JSON.md  README_THREEJS.md  angular.json  package-lock.json  package.json
angularProjectName/public/assets/: man1.json
angularProjectName/src/app/: app.component.html  app.component.spec.ts  app.component.ts  platform-service.service.ts
angularProjectName/src/app/components/button/: button.component.spec.ts  button.component.ts
angularProjectName/src/app/components/counter/: counter.component.ts
angularProjectName/src/app/components/counter-button/: counter-button.component.ts
angularProjectName/src/app/components/data/: data.component.html  data.component.ts
angularProjectName/src/app/services/: common.service.ts  data.service.ts  platform.service.ts
angularProjectName/src/app/threejs-scene/: threejs-scene.component.html  threejs-scene.component.sass  threejs-scene.component.spec.ts  threejs-scene.component.ts
design-patterns/: CMakeLists.txt  Singleton.cpp  build.bat
design-patterns/include/: Singleton.hpp
design-patterns/include/creational/singleton/: Singleton.hpp
design-patterns/src/: main.cpp
design-patterns/src/creational/singleton/: Singleton.cpp
python/: IDGenerator.py  IDGenerator.ts  Man3D_ver2.0.3.py  Second_Great_Enjoy_Andrey.man  icosahedron_centered_1.man  icosahedron_centered_3.man  man1.json  man2.json  setup.py  setup.ts
(+1 files in other folders)
